# alsvinn_insitu

./: .gitignore  .testing.xml.swp  CMakeLists.txt  README.md  alsuqcli_mpi_log_0.txt  alsuqcli_mpi_log_1.txt  alsuqcli_mpi_log_2.txt  alsuqcli_mpi_log_3.txt  catalyst_multiblock2d_mx4_my4_s10.xml  codeSnippetsComments.cpp  convert_to_old_format.py  kh_2d.nc  make_dummy_netcdf.py  submit.sh  submit.sh~  testing.xml  testingNprmaWrite.xml
adaptor/: CMakeLists.txt  CMakeListsDaint.txt  CMakeListsLaptop.txt
benchmark3d/: alsuqcli_kh3d_report.json  alsuqcli_kh3d_report.xml  alsuqcli_mpi_log_0.txt  benchmark_catalyst3d.xml  benchmark_catalyst3d_png.xml~  kelvinhelmholtz_3d_tube.py  kelvinhelmholtz_3d_tube.xml
benchmarkDaint/: #benchmarks.py#  .#benchmarks.py  benchmarks.py  benchmarks_nsamples.py  catalyst_multiblock2d.xml  make_resolutions_perturbations.py  makemovie.py  output.py  submit_command_on_daint.py  submit_on_daint.py  xml_tools.py
benchmarkSingleSample/: benchmark_catalyst_128.xml  benchmark_catalyst_pngs.xml  benchmark_catalyst_pngs_1024.xml  benchmark_catalyst_pngs_128.xml  benchmark_catalyst_pngs_2048.xml  benchmark_io.xml  benchmark_io_128.xml  benchmark_no_io_1024.xml  benchmark_no_io_512.xml  kelvinhelmholtz.xml  testingNoneCatalyst.xml
benchmarkSmall/: benchmark_catalyst.xml  benchmark_catalyst_1024.xml  benchmark_catalyst_2048.xml  benchmark_catalyst_512.xml  benchmark_catalyst_png.xml  benchmark_catalyst_pngs.xml  benchmark_io.xml  (+6 more)
writer/: CMakeLists.txt  dll_writer_exports.h  test.py
writer/include/: dll_writer.hpp
writer/src/: dll_writer.cpp
(+187 files in other folders)
